<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="project.csc207.slidingtiles.StartingActivity">

    <TextView
        android:id="@+id/GameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:gravity="center"
        android:text="Welcome To Sliding Tiles \n A Puzzle Game where you must arrange the numbers in the correct order"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

    <Button
        android:id="@+id/StartButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/GameText"
        android:layout_centerHorizontal="true"
        android:text="@string/new_game" />

    <Button
        android:id="@+id/LoadButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/GameText"
        android:layout_toStartOf="@+id/StartButton"
        android:text="@string/load_game" />

    <Button
        android:id="@+id/SaveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/GameText"
        android:layout_toEndOf="@+id/StartButton"
        android:text="@string/save_game" />

    <TextView
        android:id="@+id/AccountNameSliding"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/LoadButton"
        android:layout_alignParentTop="true"
        android:layout_marginTop="12dp"
        android:text="@string/account_name" />

    <RadioGroup
        android:id="@+id/ChoicesOfBoardSize"
        android:layout_width="165dp"
        android:layout_height="200dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="35dp"
        android:layout_marginBottom="15dp">

        <RadioButton
            android:id="@+id/RowNum3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="false"
            android:text="3 X 3 Board" />

        <RadioButton
            android:id="@+id/RowNum4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:text="4 X 4 Board" />

        <RadioButton
            android:id="@+id/RowNum5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="false"
            android:text="5 X 5 Board" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView"
        android:layout_width="89dp"
        android:layout_height="42dp"
        android:layout_alignEnd="@+id/AccountNameSliding"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="-31dp"
        android:layout_marginBottom="119dp"
        android:text="Difficulty : " />

    <Button
        android:id="@+id/RankButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="3dp"
        android:layout_marginBottom="458dp"
        android:text="@string/scoreboard" />


</RelativeLayout>